opam-version: "2.0"
name: "ws"
version: "~dev"
synopsis: "Generic websocket implementation for OCaml"
maintainer: "Dorian <dorian@vereia.com>"
authors: "Dorian <dorian@vereia.com>"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "base64" {>= 2.3.0}
  "bitstring" {>= 3.1.0}
  "containers" {>= 2.4.0}
  "ppx_deriving" {>= 4.2.1}
  "sha" {>= 1.12}
]
dev-repo: "git+https://github.com/dozzman/ws.git"
